added limited support for svg css style